--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .education {
   padding: 2rem;
 }
@@ -25,3 +27,6 @@
   margin-top: 1rem;
 }
 
+@media (max-width: 320px) {
+  
+}
