--- a/src/components/layouts/Header/Header.css
+++ b/src/components/layouts/Header/Header.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .header {
   position: fixed;
   top: 0;
@@ -27,3 +29,6 @@
   text-decoration: underline;
 }
 
+@media (max-width: 320px) {
+
+}
